@@ -3981,6 +3981,9 @@ enum : uint16_t
     STR_RIDE_CONSTRUCTION_BLOCK_BRAKE_SPEED_LIMIT_TIP = 6578,
     STR_TRACK_DESIGN_BLOCK_BRAKE_SPEED_RESET = 6579,
 
+    STR_RESET = 6580,
+    STR_RESET_SHORTCUT_KEYS_PROMPT = 6581
+
     // Have to include resource strings (from scenarios and objects) for the time being now that language is partially working
     /* MAX_STR_COUNT = 32768 */ // MAX_STR_COUNT - upper limit for number of strings, not the current count strings
 };
