@@ -9,6 +9,7 @@
 - Improved: [#18996] When marketing campaigns are disabled, disable the Marketing tab in the Finances window.
 - Improved: [#19764] Miscellaneous scenery tab now grouped next to the all-scenery tab.
 - Improved: [#19830] “Highlight path issues” will now hide wall elements.
+- Improved: [#19905] Add prompt before resetting shortcut keys.
 - Fix: [#12598] Number of holes is not set correctly when saving track designs.
 - Fix: [#13130] Android always defaulting to UK locale for language, currency and temperature.
 - Fix: [#18895] Responding mechanic blocked at level crossing.
